tests/src/frontend/syntax/invalid/mistake_let_last.sk
fun main(): String {
  f();
  let myint = 10;
}
